MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.7', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'CubeMx_Test'
assembling startup_stm32f405xx.s...
compiling main.c...
compiling adc.c...
compiling tim.c...
compiling freertos.c...
compiling stm32f4xx_hal_msp.c...
compiling gpio.c...
compiling stm32f4xx_it.c...
compiling spi.c...
compiling dma.c...
compiling usart.c...
compiling stm32f4xx_hal_timebase_tim.c...
compiling stm32f4xx_hal_adc.c...
compiling stm32f4xx_ll_adc.c...
compiling stm32f4xx_hal_tim_ex.c...
compiling stm32f4xx_hal_flash_ramfunc.c...
compiling stm32f4xx_hal_flash_ex.c...
compiling stm32f4xx_hal_flash.c...
compiling stm32f4xx_hal_gpio.c...
compiling stm32f4xx_hal_rcc_ex.c...
compiling stm32f4xx_hal_rcc.c...
compiling stm32f4xx_hal_adc_ex.c...
compiling stm32f4xx_hal_pwr.c...
compiling stm32f4xx_hal_dma_ex.c...
compiling stm32f4xx_hal_pwr_ex.c...
compiling stm32f4xx_hal_dma.c...
compiling stm32f4xx_hal.c...
compiling stm32f4xx_hal_cortex.c...
compiling stm32f4xx_hal_exti.c...
compiling system_stm32f4xx.c...
compiling stm32f4xx_hal_tim.c...
compiling stm32f4xx_hal_spi.c...
compiling stm32f4xx_hal_uart.c...
compiling usart_communication.c...
compiling st7735.c...
compiling utility.c...
compiling msg_type.c...
compiling bw.c...
compiling keyboard.c...
compiling data_process.c...
compiling msg_queue.c...
compiling tjc.c...
compiling Variables.c...
compiling FLASH.c...
compiling croutine.c...
compiling Start.c...
compiling list.c...
compiling LCD.c...
compiling WS2812b.c...
compiling event_groups.c...
compiling debug.c...
compiling stream_buffer.c...
compiling queue.c...
../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/port.c(695): error: use of undeclared identifier 'SystemCoreClock'
        portNVIC_SYSTICK_LOAD_REG = ( configSYSTICK_CLOCK_HZ / configTICK_RATE_HZ ) - 1UL;
                                      ^
../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/port.c(41): note: expanded from macro 'configSYSTICK_CLOCK_HZ'
        #define configSYSTICK_CLOCK_HZ configCPU_CLOCK_HZ
                                       ^
../Core/Inc\FreeRTOSConfig.h(67): note: expanded from macro 'configCPU_CLOCK_HZ'
#define configCPU_CLOCK_HZ                       ( SystemCoreClock )
                                                   ^
1 error generated.
compiling port.c...
compiling heap_4.c...
compiling timers.c...
compiling tasks.c...
compiling cmsis_os2.c...
"CubeMx_Test\CubeMx_Test.axf" - 1 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:04
